bk_ida/gccida/c0/emit_case_nodes
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_case_nodes/src/stmt.c:6499:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v38; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_case_nodes/src/stmt.c:6500:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v39; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_case_nodes/src/stmt.c:6501:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v40; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_case_nodes/src/stmt.c:6518:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *low; // [rsp+218h] [rbp-58h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_case_nodes/src/stmt.c:6521:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *test_label_0; // [rsp+230h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_case_nodes/src/stmt.c:6522:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *test_label; // [rsp+238h] [rbp-38h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_case_nodes/src/stmt.c:6524:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+248h] [rbp-28h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_case_nodes/src/stmt.c:6540:30: error: use of undeclared identifier 'machine_mode'
v47 = convert_modes( mode, ( machine_mode)imode, v20, unsignedp); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_case_nodes/src/stmt.c:6548:30: error: use of undeclared identifier 'machine_mode'
v46 = convert_modes( mode, ( machine_mode)imode, v22, unsignedp); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_case_nodes/src/stmt.c:6553:30: error: use of undeclared identifier 'machine_mode'
v45 = convert_modes( mode, ( machine_mode)imode, v24, unsignedp); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_case_nodes/src/stmt.c:6570:30: error: use of undeclared identifier 'machine_mode'
v27 = convert_modes( mode, ( machine_mode)imode, v26, unsignedp); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_case_nodes/src/stmt.c:6574:30: error: use of undeclared identifier 'machine_mode'
v44 = convert_modes( mode, ( machine_mode)imode, v28, unsignedp); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_case_nodes/src/stmt.c:6585:30: error: use of undeclared identifier 'machine_mode'
v31 = convert_modes( mode, ( machine_mode)imode, v30, unsignedp); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_case_nodes/src/stmt.c:6589:30: error: use of undeclared identifier 'machine_mode'
v43 = convert_modes( mode, ( machine_mode)imode, v32, unsignedp); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_case_nodes/src/stmt.c:6617:30: error: use of undeclared identifier 'machine_mode'
v37 = convert_modes( mode, ( machine_mode)imode, v36, unsignedp); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_case_nodes/src/stmt.c:6624:30: error: use of undeclared identifier 'machine_mode'
v35 = convert_modes( mode, ( machine_mode)imode, v34, unsignedp); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_case_nodes/src/stmt.c:6633:30: error: use of undeclared identifier 'machine_mode'
op2 = convert_modes( mode, ( machine_mode)imode, v4, unsignedp); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_case_nodes/src/stmt.c:6641:28: error: use of undeclared identifier 'machine_mode'
y = convert_modes( mode, ( machine_mode)imode, v6, unsignedp); 
                           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_case_nodes/src/stmt.c:6650:30: error: use of undeclared identifier 'machine_mode'
v51 = convert_modes( mode, ( machine_mode)imode, v8, unsignedp); 
                             ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_case_nodes/src/obj/stmt.o] Error 1
